Added test, removed express-openapi-validator
